Fixed sidebar scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -381,13 +381,17 @@ body {
     margin-top: 0px;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 90px);
     transition: .4s;
     background-color: #E5E5E5;
     font-size: 1.25em;
     text-align: left;
     overflow: auto;
     margin-bottom: 50px;
+}
+
+#sidebar-content::-webkit-scrollbar {
+    display: none;
 }
 
 #sidebar-content .sidebar-item {
@@ -408,9 +412,9 @@ body {
 
 #sidebar-content .sidebar-text {
     position: relative;
-    top: 1px;
+    top: 3px;
     left: 15px;
-    font-size: 25px;
+    font-size: 18px;
     font-weight: 200;
 }
 
@@ -426,10 +430,6 @@ body {
 
 #sidebar-content .positionfix {
     margin-top: 32px;
-}
-
-#sidebar-content .positionfix2 {
-    margin-top: 50px;
 }
 
 #sidebar-content .friend-img {
